# rpo-labs-26

Lab1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Lab1/app/src/main/java/ru/iu3/fclient/: PinpadActivity.java
Lab1/app/src/main/res/values-night/: themes.xml
app/: build.gradle.kts
app/src/main/java/ru/iu3/fclient/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
